fix: add internal endpoints for courses tests and drafts
